es: pages traslated

--- a/src/content/docs/es/tutorial/2-pages/1.mdx
+++ b/src/content/docs/es/tutorial/2-pages/1.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Create your first Astro page
+title: Cree su primera página Astro
 description: |-
-  Tutorial: Build your first Astro blog —
-  Add new pages to your site with navigation links between them
+  Tutorial: Crea tu primer blog Astro —
+  Añada nuevas páginas a su sitio con enlaces de navegación entre ellas
 ---
 import Checklist from '~/components/Checklist.astro';
 import Blanks from '~/components/tutorial/Blanks.astro';
@@ -11,132 +11,132 @@ import Box from '~/components/tutorial/Box.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
-Now that you know that `.astro` files are responsible for pages on your website, let's create one!
+Ahora que ya sabes que los archivos `.astro` son los responsables de las páginas de tu sitio web, ¡vamos a crear uno!
 
 <PreCheck>
-  - Create two new pages on your website: About and Blog
-  - Add navigation links to your pages
-  - Deploy an updated version of your website to the web
+  - Cree dos nuevas páginas en su sitio web: Acerca de y Blog
+  - Añada enlaces de navegación a sus páginas
+  - Despliegue en la web una versión actualizada de su sitio web
 </PreCheck>
 
-## Create a new `.astro` file
+## Crear un nuevo archivo `.astro`
 
-1. In the files pane of your code editor, navigate to the folder `src/pages/` where you will see the existing file `index.astro`
+1. En el panel de archivos de su editor de código, vaya a la carpeta `src/pages/` donde verá el archivo existente `index.astro`
 
-2. In that same folder, create a new file named `about.astro`.
+2. En esa misma carpeta, crea un nuevo archivo llamado `about.astro`.
 
-3. Copy, or retype the contents of `index.astro` into your new `about.astro` file.
+3. Copie o vuelva a escribir el contenido de `index.astro` en su nuevo archivo `about.astro`.
 
     :::tip
-    Your editor might show a solid white circle on the tab label for this file. This means that the file is not yet saved. Under the File menu in VS Code, enable "Auto Save" and you should no longer need to save any files manually.
+    Su editor puede mostrar un círculo blanco sólido en la etiqueta de este archivo. Esto significa que el archivo aún no se ha guardado. En el menú Archivo de VS Code, active la opción "Guardar automáticamente" y ya no tendrá que guardar ningún archivo manualmente.
     :::
 
-4. Add `/about` to the end of your website preview's URL in the address bar and check that you can see a page load there. (e.g. `http://localhost:3000/about`)
+4. Añada `/about` al final de la URL de la vista previa de su sitio web en la barra de direcciones y compruebe que puede ver una página cargada allí. (por ejemplo, `http://localhost:3000/about`)
 
-Right now, your "About" page should look exactly the same as the first page, but we're going to change that!
+Ahora mismo, tu página "Acerca de" debería tener exactamente el mismo aspecto que la primera página, pero vamos a cambiarlo.
 
-## Edit your page
+## Edite su página
 
-Edit the HTML content to make this page about you.
+Edite el contenido HTML para que esta página sea sobre usted.
 
-To change or add more content to your About page, add more HTML element tags containing content. You can copy and paste the HTML code below between the existing `<body></body>` tags, or create your own.
+Para cambiar o añadir más contenido a su página Acerca de, añada más etiquetas de elementos HTML que contengan contenido. Puede copiar y pegar el código HTML siguiente entre las etiquetas `<body></body>` existentes, o crear las suyas propias.
 
 ```astro title="src/pages/about.astro" ins={3-8} del={2}
 <body>
-  <h1>My Astro Site</h1>
-  <h1>About Me</h1>
-  <h2>... and my new Astro site!</h2>
+  <h1>Mi sitio Astro</h1>
+  <h1>Sobre mi</h1>
+  <h2>... ¡y mi nuevo sitio Astro!</h2>
 
-  <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+  <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
 
-  <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+  <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
 </body>
 ```
 
-Now, visit your `/about` page in your browser tab again, and you should see your updated content.
+Ahora, vuelva a visitar su página `/about` en la pestaña de su navegador, y debería ver su contenido actualizado.
 
-## Add navigation links
+## Añadir enlaces de navegación
 
-To make it easier to preview all your pages, add HTML page navigation links before your `<h1>` at the top of both of your pages (`index.astro` and `about.astro`):
+Para facilitar la previsualización de todas sus páginas, añada enlaces HTML de navegación de páginas antes de su `<h1>` en la parte superior de sus dos páginas (`index.astro` y `about.astro`):
 
 ```astro title="src/pages/about.astro" ins={1-2}
-<a href="/">Home</a>
-<a href="/about/">About</a>
+<a href="/">Inicio</a>
+<a href="/about/">Sobre mi</a>
 
-<h1>About Me</h1>
-<h2>... and my new Astro site!</h2>
+<h1>Sobre mi</h1>
+<h2>... ¡y mi nuevo sitio Astro!</h2>
 ```
 
-Check that you can click these links to move back and forth between pages on your site.
+Compruebe que puede hacer clic en estos enlaces para avanzar y retroceder entre las páginas de su sitio.
 
-:::note
-Unlike many frameworks, Astro uses standard HTML `<a>` elements to navigate between pages (also called _routes_), with traditional page refreshes.
+:::nota
+A diferencia de muchos frameworks, Astro utiliza elementos HTML estándar `<a>` para navegar entre páginas (también llamados _routes_), con las tradicionales actualizaciones de página.
 :::
 
 <Box icon="puzzle-piece">
-## Try it yourself - Add a Blog page
+## Pruébelo usted mismo - Añadir una página de blog
 
-Add a third page `blog.astro` to your site, following the [same steps as above](#create-a-new-astro-file).
+Añade una tercera página `blog.astro` a tu sitio, siguiendo los [mismos pasos que arriba](#create-a-new-astro-file).
 
-(Don't forget to add a third navigation link to every page.)
+(No olvide añadir un tercer enlace de navegación a cada página).
 
 <details>
-<summary>Show me the steps.</summary>
-1. Create a new file at `src/pages/blog.astro`.
-2. Copy the entire contents of `index.astro` and paste them into `blog.astro`.
-3. [Add a third navigation link](#add-navigation-links) to the top of every page:
+<summary>Muéstrame los pasos.</summary>
+1. Crea un nuevo archivo en `src/pages/blog.astro`.
+2. Copia todo el contenido de `index.astro` y pégalo en `blog.astro`.
+3. [Añade un tercer enlace de navegación](#add-navigation-links) en la parte superior de cada página:
 
 ```astro title="src/pages/index.astro" ins={4}
 <body>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
+  <a href="/">Inicio</a>
+  <a href="/about/">Sobre mi</a>
   <a href="/blog/">Blog</a>
 
-  <h1>My Astro Site</h1>
+  <h1>Mi sitio Astro</h1>
 </body>
 ```
 </details>
 </Box>
 
-You should now have a website with three pages that all link to each other. Let's add some content to the Blog page.
+Ahora deberías tener un sitio web con tres páginas enlazadas entre sí. Vamos a añadir algo de contenido a la página Blog.
 
-Update the page content at `blog.astro` with:
+Actualizar el contenido de la página en `blog.astro` con:
 ```astro astro title="src/pages/blog.astro" ins={7-8} del={6}
 <body>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
+  <a href="/">Inicio</a>
+  <a href="/about/">Sobre mi</a>
   <a href="/blog/">Blog</a>
 
-  <h1>My Astro Site</h1>
-  <h1>My Astro Learning Blog</h1>
-  <p>This is where I will post about my journey learning Astro.</p>
+  <h1>Mi sitio Astro</h1>
+  <h1>Mi blog de Astro aprendizaje</h1>
+  <p>Aquí es donde voy a postear sobre mi viaje de aprendizaje Astro.</p>
 </body>
 ```
 
-Preview your entire site by visiting all three pages in your browser preview and check that:
-- Every page correctly links to all three pages
-- Your two new pages each have their own descriptive heading 
-- Your two new pages each have their own paragraph text
+Previsualice todo su sitio visitando las tres páginas en la vista previa de su navegador y compruébelo:
+- Cada página enlaza correctamente con las tres páginas
+- Sus dos nuevas páginas tienen cada una su propio título descriptivo 
+- Sus dos nuevas páginas tienen cada una su propio párrafo de texto
 
-## Publish your changes to the web
-If you've followed our setup in Unit 1, you can publish your changes to your live website through Netlify.
+## Publique sus cambios en la web
+Si ha seguido nuestra configuración en la Unidad 1, puede publicar sus cambios en su sitio web en vivo a través de Netlify.
 
-When you are happy with the way your preview looks, **commit** your changes to your online repository at GitHub. 
+Cuando estés satisfecho con el aspecto de tu vista previa, has un **commit** de los cambios a tu repositorio online en GitHub. 
 
-1. In VS Code, preview the files that have changed since your last commit to GitHub. 
+1. En VS Code, previsualiza los archivos que han cambiado desde tu último commit en GitHub. 
 
-    - Go to the **Source Control tab** in the left menu. It should have a small "3" displayed.
+    - Vaya a la pestaña **Control de origen** del menú de la izquierda. Debería aparecer un pequeño "3".
 
-    - You should see `index.astro`, `about.astro`, and `blog.astro` listed as files that have changed.
+    - Debería ver que `index.astro`, `about.astro` y `blog.astro` aparecen como archivos que han cambiado.
 
-2. Enter a commit message (e.g. "Added two new pages - about and blog") in the text box, and press <kbd>Ctrl + Enter</kbd> (macOS: <kbd>Cmd ⌘ + Enter</kbd>) to commit the change to your current workspace.
+2. Introduzca un mensaje de confirmación (por ejemplo, "Añadidas dos nuevas páginas: acerca de y blog") en el cuadro de texto y pulse <kbd>Ctrl + Enter</kbd> (macOS: <kbd>Cmd ⌘ + Enter</kbd>) para confirmar el cambio en su espacio de trabajo actual.
 
-3. Click the button to <kbd>Sync Changes</kbd> to GitHub.
+3. Haz clic en el botón para <kbd>Sincronizar cambios</kbd> con GitHub.
 
-4. After waiting a few minutes, visit your Netlify URL to verify that your changes are published live.
+4. Después de esperar unos minutos, visite su URL Netlify para verificar que sus cambios se publican en vivo.
 
-:::tip[commit and deploy regularly]
-Follow these steps every time you pause working! Your changes will be updated in your GitHub repository. If you've deployed to a Netlify website, it will be rebuilt and republished.
+:::tip[has commits y deploy regularmente]
+Sigue estos pasos cada vez que hagas una pausa en tu trabajo. Tus cambios se actualizarán en tu repositorio de GitHub. Si has desplegado a un sitio web Netlify, será reconstruido y republicado.
 :::
 
 
@@ -145,13 +145,13 @@ Follow these steps every time you pause working! Your changes will be updated in
 ## Checklist
 
 <Checklist>
-- [ ] I can create a new page for my website and link to it from an existing page.
-- [ ] I can commit my changes back to GitHub and update my live site on Netlify.
+- [ ] Puedo crear una nueva página para mi sitio web y enlazar a ella desde una página existente.
+- [ ] Puedo enviar mis cambios a GitHub y actualizar mi sitio en Netlify.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- [File-based Routing in Astro](/en/core-concepts/astro-pages/#file-based-routing)
+- [Enrutamiento basado en archivos en Astro](/en/core-concepts/astro-pages/#file-based-routing)
 
-- [Astro page HTML](/en/core-concepts/astro-pages/#astro-pages)
+- [Astro páginas HTML](/en/core-concepts/astro-pages/#astro-pages)
