--- a/src/content/docs/es/tutorial/2-pages/2.mdx
+++ b/src/content/docs/es/tutorial/2-pages/2.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Write your first Markdown blog post
+title: Escribe tu primer post en Markdown
 description: |-
-  Tutorial: Build your first Astro blog —
-  Add Markdown pages to your site
+  Tutorial: Crea tu primer blog Astro —
+  Añade páginas Markdown a tu sitio
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -15,71 +15,71 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 
-Now that you have built pages using `.astro` files, let's make some blog posts using `.md` files!
+Ahora que ya has creado páginas con archivos `.astro`, vamos a crear algunos posts con archivos `.md`.
 
 <PreCheck>
-  - Make a new folder and create a new post
-  - Write some Markdown content
-  - Link to your blog posts on your Blog page
+  - Crea una nueva carpeta y crea un nuevo post
+  - Escribir contenido Markdown
+  - Enlace a sus posts en la página de su blog
 </PreCheck>
 
-## Create your first `.md` file
+## Crea tu primer archivo `.md`.
 
-1. Create a new directory at `src/pages/posts/`. 
+1. Crea un nuevo directorio en `src/pages/posts/`. 
 
-2. Add a new (empty) file `post-1.md` inside your new `/posts/` folder.
+2. Añade un nuevo fichero (vacío) `post-1.md` dentro de tu nueva carpeta `/posts/`.
 
-3. Look for this page in your browser preview by adding `/posts/post-1` to the end of your existing preview URL. (e.g. `localhost:3000/posts/post-1`)
+3. Busque esta página en la vista previa de su navegador añadiendo `/posts/post-1` al final de su URL de vista previa. (por ejemplo, `localhost:3000/posts/post-1`)
 
-4. Change the browser preview URL to view `/posts/post-2` instead. (This is a page you have not yet created.) 
+4. Cambie la URL de vista previa del navegador para ver `/posts/post-2` en su lugar. (Se trata de una página que aún no ha creado). 
 
-    Note the different output when previewing an "empty" page, and one that doesn't exist. This will help you troubleshoot in the future.
+    Fíjese en los diferentes resultados que se obtienen al previsualizar una página "vacía" y otra que no existe. Esto le ayudará a solucionar problemas en el futuro.
 
-## Write Markdown content
+## Escribir contenido Markdown
 
-1. Copy or type the following code into `post-1.md`
+1. Copie o escriba el siguiente código en `post-1.md`.
 
     ```markdown title="src/pages/posts/post-1.md"
     ---
-    title: 'My First Blog Post'
+    title: 'Mi primer post en el blog'
     pubDate: 2022-07-01
-    description: 'This is the first post of my new Astro blog.'
-    author: 'Astro Learner'
+    description: 'Este es el primer post de mi nuevo blog Astro.'
+    author: 'Astro alumno'
     image:
         url: 'https://astro.build/assets/blog/astro-1-release-update/cover.jpeg' 
-        alt: 'The Astro logo with the word One.'
-    tags: ["astro", "blogging", "learning in public"]
+        alt: 'El logotipo de Astro con la palabra One.'
+    tags: ["astro", "bloguear", "aprender en público"]
     ---
-    # My First Blog Post
+    # Mi primer post en el blog
 
     Published on: 2022-07-01
 
-    Welcome to my _new blog_ about learning Astro! Here, I will share my learning journey as I build a new website.
+    ¡Bienvenido a mi _nuevo blog_ sobre el aprendizaje de Astro! Aquí, voy a compartir mi viaje de aprendizaje a medida que construyo un nuevo sitio web.
 
-    ## What I've accomplished
+    ## Lo que he conseguido
 
-    1. **Installing Astro**: First, I created a new Astro project and set up my online accounts.
+    1. **Instalación de Astro**: En primer lugar, he creado un nuevo proyecto Astro y configurar mis cuentas en línea.
 
-    2. **Making Pages**: I then learned how to make pages by creating new `.astro` files and placing them in the `src/pages/` folder.
+    2. **Haciendo páginas**: Luego aprendí cómo hacer páginas creando nuevos archivos `.astro` y colocándolos en la carpeta `src/pages/`.
 
-    3. **Making Blog Posts**: This is my first blog post! I now have Astro pages and Markdown posts!
+    3. **Haciendo posts**: ¡Este es mi primer post! ¡Ahora tengo páginas Astro y posts en Markdown!
 
-    ## What's next
+    ## Próximos pasos
 
-    I will finish the Astro tutorial, and then keep adding more posts. Watch this space for more to come.
+    Terminaré el tutorial de Astro, y luego seguiré añadiendo más posts. Mira este espacio para más por venir.
     ```
 
-2. Check your browser preview again at `localhost:3000/posts/post-1`. You should now see content on this page.
+2. Compruebe de nuevo la vista previa de su navegador en `localhost:3000/posts/post-1`. Ahora debería ver el contenido de esta página.
 
-3. Use your browser's Dev Tools to inspect this page. Notice that although you have not typed any HTML elements, your Markdown has been converted to HTML. You can see elements such as headings, paragraphs, and list items.
+3. Utilice las herramientas de desarrollo de su navegador para inspeccionar esta página. Observa que, aunque no has escrito ningún elemento HTML, tu Markdown se ha convertido a HTML. Puede ver elementos como encabezados, párrafos y elementos de lista.
 
-:::note
-The information at the top of the file, inside the code fences, is called frontmatter. This data—including tags and a post image—is information *about* your post that Astro can use. It does not appear on the page automatically, but we will access it later in the tutorial to enhance your site. 
+:::nota
+La información en la parte superior del archivo, dentro de las vallas de código, se llama frontmatter. Estos datos -incluyendo etiquetas y una imagen del post- son información *sobre* tu post que Astro puede usar. No aparece en la página automáticamente, pero accederemos a ella más adelante en el tutorial para mejorar tu sitio. 
 :::
 
-## Link to your posts
+## Enlace a sus posts
 
-1. Link to your first post with an anchor tag in `src/pages/blog.astro`:
+1. Enlaza a tu primer post con una etiqueta anchor en `src/pages/blog.astro`:
     ```astro title="src/pages/blog.astro" ins={16-18}
     ---
     ---
@@ -90,12 +90,12 @@ The information at the top of the file, inside the code fences, is called frontm
         <title>Astro</title>
       </head>
       <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
+        <a href="/">Inicio</a>
+        <a href="/about/">Sobre mi</a>
         <a href="/blog/">Blog</a>
 
-        <h1>My Astro Learning Blog</h1>
-        <p>This is where I will post about my journey learning Astro.</p>
+        <h1>Mi blog de Astro aprendizaje</h1>
+        <p>Aquí es donde voy a post sobre mi viaje de aprendizaje Astro.</p>
         <ul>
           <li><a href="/posts/post-1/">Post 1</a></li>
         </ul>
@@ -103,37 +103,37 @@ The information at the top of the file, inside the code fences, is called frontm
     </html>
     ```
 
-2. Now, add two more files in `src/pages/posts/`: `post-2.md` and `post-3.md`. Here is some sample code you can copy and paste into your files, or, you can create your own!
+2. Ahora, añade dos ficheros más en `src/pages/posts/`: `post-2.md` y `post-3.md`. Aquí tienes un ejemplo de código que puedes copiar y pegar en tus archivos, ¡o puedes crear el tuyo propio!
 
     ```md title="src/pages/posts/post-2.md"
     ---
-    title: My Second Blog Post
-    author: Astro Learner
-    description: "After learning some Astro, I couldn't stop!"
+    title: Mi segundo post en el blog
+    author: Astro alumno
+    description: "Después de aprender un poco de Astro, ¡no podía parar!"
     image: 
         url: "https://astro.build/assets/blog/astro-showcase/astro-showcase-screenshot.jpg"
-        alt: "Thumbnails of websites from the Astro Showcase site."
+        alt: "Miniaturas de páginas web del sitio Astro Showcase."
     pubDate: 2022-07-08
-    tags: ["astro", "blogging", "learning in public","successes"]
+    tags: ["astro", "bloguear", "aprender en público","éxitos"]
     ---
-    After a successful first week learning Astro, I decided to try some more. I wrote and imported a small component from memory!
+    Después de una exitosa primera semana aprendiendo Astro, decidí probar un poco más. Escribí e importé un pequeño componente de memoria.
     ```
 
     ```md title="src/pages/posts/post-3.md"
     ---
-    title: My Third Blog Post
-    author: Astro Learner
-    description: "I had some challenges, but asking in the community really helped!"
+    title: Mi tercer post en el blog
+    author: Astro alumno
+    description: "Tuve algunos problemas, pero preguntar en la comunidad me ayudó mucho."
     image: 
         url: "https://astro.build/assets/blog/community-day/cover.jpg"
-        alt: "The word community with a heart."
+        alt: "La palabra comunidad con corazón."
     pubDate: 2022-07-15
-    tags: ["astro", "learning in public", "setbacks", "community"]
+    tags: ["astro", "aprender en público", "contratiempos", "comunidad"]
     ---
-    It wasn't always smooth sailing, but I'm enjoying building with Astro. And, the [Discord community](https://astro.build/chat) is really friendly and helpful!
+    No siempre ha sido fácil, pero disfruto construyendo con Astro. Además, la [comunidad de Discord](https://astro.build/chat) es muy amable y servicial.
     ```
 
-3. Add links to these new posts:
+3. Añade enlaces a estos nuevos posts:
 
     ```astro title="src/pages/blog.astro" ins={18-19}
     ---
@@ -146,11 +146,11 @@ The information at the top of the file, inside the code fences, is called frontm
       </head>
       <body>
         <a href="/">Home</a>
-        <a href="/about/">About</a>
+        <a href="/about/">Sobre mi</a>
         <a href="/blog/">Blog</a>
 
-        <h1>My Astro Learning Blog</h1>
-        <p>This is where I will post about my journey learning Astro.</p>
+        <h1>Mi blog de Astro aprendizaje</h1>
+        <p>Aquí es donde voy a post sobre mi viaje de aprendizaje Astro.</p>
         <ul>
           <li><a href="/posts/post-1/">Post 1</a></li>
           <li><a href="/posts/post-2/">Post 2</a></li>
@@ -160,16 +160,16 @@ The information at the top of the file, inside the code fences, is called frontm
     </html>
     ```
 
-4. Check your browser preview and make sure that:
+4. Compruebe la vista previa de su navegador y asegúrese de que:
 
-    - All your links for Post 1, Post 2, and Post 3 lead to a working page on your site. (If you find a mistake, check your links on `blog.astro` or your Markdown file names.)
+    - Todos tus enlaces para los posts 1, 2 y 3 llevan a una página funcional de tu sitio. (Si encuentras un error, comprueba tus enlaces en `blog.astro` o los nombres de tus archivos Markdown).
 
 
 
 <Box icon="question-mark">
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
-1. Content in a Markdown (`.md`) file is converted to:
+1. El contenido de un archivo Markdown (`.md`) se convierte a:
     <MultipleChoice>
         <Option isCorrect>HTML</Option>
         <Option>CSS</Option>
@@ -181,16 +181,16 @@ The information at the top of the file, inside the code fences, is called frontm
 ## Checklist
 
 <Checklist>
-- [ ] I can create a new folder within `src/pages/` for my blog posts.
-- [ ] I can create a new Markdown (`.md`) blog post file.
-- [ ] I understand that Markdown is another language that, like Astro, produces HTML in my browser.
+- [ ] Puedo crear una nueva carpeta dentro de `src/pages/` para los posts de mi blog.
+- [ ] Puedo crear un nuevo archivo Markdown (`.md`) para un post del blog.
+- [ ] Entiendo que Markdown es otro lenguaje que, como Astro, produce HTML en mi navegador.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- [Markdown Cheat Sheet from The Markdown Guide](https://www.markdownguide.org/cheat-sheet/)  <Badge>external</Badge>
+- [Markdown Cheat Sheet de The Markdown Guide](https://www.markdownguide.org/cheat-sheet/)  <Badge>externo</Badge>
 
-- [What are browser developer tools? MDN](https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools)  <Badge>external</Badge>
+- [¿Qué son las herramientas para desarrolladores de navegadores? MDN](https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools)  <Badge>externo</Badge>
 
-- [YAML frontmatter](https://assemble.io/docs/YAML-front-matter.html)  <Badge>external</Badge>
+- [YAML frontmatter](https://assemble.io/docs/YAML-front-matter.html)  <Badge>externo</Badge>
