--- a/src/content/docs/es/tutorial/2-pages/3.mdx
+++ b/src/content/docs/es/tutorial/2-pages/3.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Add dynamic content about you
+title: Añade contenido dinámico sobre ti
 description: |-
-  Tutorial: Build your first Astro blog —
-  Use variables and conditional rendering on your Astro pages
+  Tutorial: Crea tu primer blog Astro —
+  Utilice variables y renderización condicional en sus páginas Astro
 ---
 import Checklist from '~/components/Checklist.astro';
 import Spoiler from '~/components/Spoiler.astro';
@@ -15,19 +15,19 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 
-Now that you have a multi-page website with HTML content, let's add some dynamic HTML!
+Ahora que ya tienes un sitio web multipágina con contenido HTML, ¡vamos a añadir algo de HTML dinámico!
 
 <PreCheck>
-  - Define your page title in frontmatter, and use it in your HTML
-  - Conditionally display HTML elements
-  - Add some content about you
+  - Defina el título de su página en frontmatter y utilícelo en su HTML
+  - Visualización condicional de elementos HTML
+  - Añade contenido sobre ti
 </PreCheck>
 
-Any HTML file is valid Astro language. But, you can do more with Astro than just regular HTML!
+Cualquier archivo HTML es un lenguaje Astro válido. Pero con Astro puedes hacer mucho más que HTML normal.
 
-## Define and use a variable
+## Definir y utilizar una variable
 
-Open `about.astro` which should look like this:
+Abra `about.astro` que debería tener este aspecto:
 
 ```astro title="src/pages/about.astro"
 ---
@@ -40,28 +40,28 @@ Open `about.astro` which should look like this:
     <title>Astro</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
+    <a href="/">Inicio</a>
+    <a href="/about/">Sobre mi</a>
     <a href="/blog/">Blog</a>
-    <h1>About Me</h1>
-    <h2>... and my new Astro site!</h2>
+    <h1>Sobre mi</h1>
+    <h2>... ¡y mi nuevo sitio Astro!</h2>
 
-    <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+    <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
 
-    <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+    <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
   </body>
 </html>
 ```
 
-1. Add the following line of JavaScript in the frontmatter script, between the **code fences**:
+1. Añade la siguiente línea de JavaScript en el script frontmatter, entre las **vallas de código**:
 
     ```astro title="src/pages/about.astro" ins={2}
     ---
-    const pageTitle = "About Me";
+    const pageTitle = "Sobre mi";
     ---
     ```
 
-2. Replace both the static "Astro" title and "About Me" heading in your HTML with the dynamic variable `{pageTitle}`.
+2. Sustituye tanto el título estático "Astro" como el encabezado "Sobre mí" en tu HTML por la variable dinámica `{pageTitle}`.
 
     ```astro title="src/pages/about.astro" del={5,12} ins={6,13}
     <html lang="en">
@@ -72,81 +72,81 @@ Open `about.astro` which should look like this:
         <title>{pageTitle}</title>
       </head>
       <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
+        <a href="/">Inicio</a>
+        <a href="/about/">Sobre mi</a>
         <a href="/blog/">Blog</a>
-        <h1>About Me</h1>
+        <h1>Sobre mi</h1>
         <h1>{pageTitle}</h1>
-        <h2>... and my new Astro site!</h2>
+        <h2>... ¡y mi nuevo sitio Astro!</h2>
 
-        <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+        <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
 
-        <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+        <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
       </body>
     </html>
     ```
 
-3. Refresh the live preview of your `/about` page.
+3. Actualice la vista previa en directo de su página `/about`.
   
-    Your page text should look the same, and your page title displayed in your browser tab should now read "About Me" instead of "Astro." 
+    El texto de tu página debería tener el mismo aspecto, y el título de tu página mostrado en la pestaña de tu navegador debería decir ahora "Sobre mí" en lugar de "Astro". 
 
-    Instead of typing text directly into HTML tags, you just **defined and then used a variable** in the two sections of your `.astro` file, respectively.
+    En lugar de escribir el texto directamente en las etiquetas HTML, acaba de **definir y luego utilizar una variable** en las dos secciones de su archivo `.astro`, respectivamente.
 
-4. Use the same pattern to create a `pageTitle` value to use in `index.astro` ("Home Page") and `blog.astro` ("My Astro Learning Blog"). Update the HTML of these pages in both places so that your page title matches the heading displayed on each page.
+4. Utiliza el mismo patrón para crear un valor `pageTitle` que utilizarás en `index.astro` ("Página de inicio") y `blog.astro` ("Mi blog de Astro aprendizaje"). Actualiza el HTML de estas páginas en ambos sitios para que el título de tu página coincida con el encabezado que aparece en cada página.
 
 :::note[Takeaway]
-- **Define** variables in your Astro script using JavaScript or TypeScript expressions.
-- **Use** these variables in your Astro template inside curly braces { } to tell Astro you're using some JavaScript.
+- **Define** variables en tu script Astro usando expresiones JavaScript o TypeScript.
+- **Usa** estas variables en tu plantilla Astro dentro de llaves { } para decirle a Astro que estás usando algo de JavaScript.
 :::
 
-## Write JavaScript expressions in Astro
+## Escribir expresiones JavaScript en Astro
 
-1. Add the following JavaScript to your frontmatter, between the **code fences**:
+1. Añade el siguiente JavaScript a tu frontmatter, entre las **vallas de código**:
 
-      (You can customize the code for yourself, but this tutorial will use the following example.)
+      (Puede personalizar el código usted mismo, pero este tutorial utilizará el siguiente ejemplo.)
 
     ```astro title="src/pages/about.astro" ins={4-9, 11}
     ---
-    const pageTitle = "About Me";
+    const pageTitle = "Sobre mi";
 
     const identity = {
       firstName: "Sarah",
       country: "Canada",
-      occupation: "Technical Writer",
-      hobbies: ["photography", "birdwatching", "baseball"],
+      occupation: "Escritor técnico",
+      hobbies: ["fotografia", "observación de aves", "peñarol"],
     };
 
-    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
     ---
     ```
 
-2. Then, add the following code to your HTML template, below your existing content:
+2. A continuación, añada el siguiente código a su plantilla HTML, debajo del contenido existente:
 
     ```astro title="src/pages/about.astro"
-    <p>Here are a few facts about me:</p>
+    <p>He aquí algunos datos sobre mí:</p>
     <ul>
-      <li>My name is {identity.firstName}.</li>
-      <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+      <li>Me llamo {identity.firstName}.</li>
+      <li>Vivo en {identity.country} y trabajo como {identity.occupation}.</li>
       {identity.hobbies.length >= 2 && 
-        <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+        <li>Dos de mis aficiones son: {identity.hobbies[0]} y {identity.hobbies[1]}</li>
       } 
     </ul>
-    <p>My skills are:</p>
+    <p>Mis habilidades son:</p>
     <ul>
       {skills.map((skill) => <li>{skill}</li>)}
     </ul>
     ```
 :::note[Takeaways]
-1. Writing an Astro template is very much like **writing HTML**, but you can include JavaScript expressions within it.
-2. The Astro frontmatter script contains only JavaScript. 
-3. You can use all modern JavaScript **logical operators**, **expressions** and **functions** in either section of your `.astro` file. But, curly braces are necessary (only) in the HTML template body.
+1. Escribir una plantilla Astro es muy parecido a **escribir HTML**, pero puedes incluir expresiones JavaScript dentro de ella.
+2. El script Astro frontmatter sólo contiene JavaScript. 
+3. Puede utilizar todos los **operadores lógicos**, **expresiones** y **funciones** modernos de JavaScript en cualquier sección de su archivo `.astro`. Sin embargo, las llaves son necesarias (sólo) en el cuerpo de la plantilla HTML.
 :::
 
 <Box icon="question-mark">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
-1. A `.astro` file's frontmatter is written in:
+1. La portada de un archivo `.astro` se escribe en:
 
     <MultipleChoice>
         <Option>HTML</Option>
@@ -154,46 +154,46 @@ Open `about.astro` which should look like this:
         <Option isCorrect>JavaScript</Option>
     </MultipleChoice>
 
-2. In addition to HTML, Astro syntax allows you to include:
+2. Además de HTML, la sintaxis Astro permite incluir:
 
     <MultipleChoice>
-        <Option isCorrect>JavaScript logical operators, expressions and functions</Option>
+        <Option isCorrect>Operadores lógicos, expresiones y funciones de JavaScript</Option>
         <Option>YAML</Option>
         <Option>Markdown</Option>
     </MultipleChoice>
 
-3. When do you need to write your JavaScript inside curly braces?
+3. ¿Cuándo hay que escribir JavaScript entre llaves?
     <MultipleChoice>
         <Option>
-          When you're not sure whether it's correct.
+          Cuando no está seguro de si es correcto.
         </Option>
         <Option isCorrect>
-          When inside the HTML template section of an Astro component.
+          Cuando está dentro de la sección de plantilla HTML de un componente Astro.
           </Option>
         <Option>
-          Between the code fences in an Astro component.
+          Entre las vallas de código de un componente Astro.
         </Option>
     </MultipleChoice>
 </Box>
 
-## Conditionally render elements
+## Renderización condicional de elementos
 
-You can also use your script variables to choose **whether or not** to render individual elements of your HTML `<body>` content.
+También puedes usar tus variables de script para elegir **si renderizar o no** elementos individuales de tu contenido HTML `<body>`.
 
-1. Add the following lines to your frontmatter script to **define variables**:
+1. Añade las siguientes líneas a tu script frontmatter para **definir variables**:
 
     ```astro title="src/pages/about.astro" ins={13-15}
     ---
-    const pageTitle = "About Me";
+    const pageTitle = "Sobre mi";
 
     const identity = {
       firstName: "Sarah",
       country: "Canada",
-      occupation: "Technical Writer",
-      hobbies: ["photography", "birdwatching", "baseball"],
+      occupation: "Escritor técnico",
+      hobbies: ["fotografia", "observación de aves", "peñarol"],
     };
 
-    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
 
     const happy = true;
     const finished = false;
@@ -201,31 +201,31 @@ You can also use your script variables to choose **whether or not** to render in
     ---
     ```
 
-2. Add the following lines below your existing paragraphs.
+2. Añada las siguientes líneas debajo de los párrafos existentes.
 
-    Then, check the live preview in your browser tab to see what is displayed on the page:
+    A continuación, compruebe la vista previa en directo en la pestaña de su navegador para ver lo que se muestra en la página:
 
     ```astro title="src/pages/about.astro" /:|&&/ "?"
-    {happy && <p>I am happy to be learning Astro!</p>}
+    {happy && <p>¡Estoy feliz de aprender Astro!</p>}
 
-    {finished && <p>I finished this tutorial!</p>}
+    {finished && <p>¡He terminado este tutorial!</p>}
 
-    {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+    {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
     ```
 
-3. Commit your changes to GitHub before moving on. Do this any time you want to save your work and update your live website.
+3. Confirma tus cambios en GitHub antes de continuar. Haga esto cada vez que desee guardar su trabajo y actualizar su sitio web en vivo.
 
 :::tip
-Astro's templating syntax is similar to JSX syntax. If you're ever wondering how to use your script in your HTML, then searching for how it is done in JSX is probably a good starting point!
+La sintaxis de plantillas de Astro es similar a la sintaxis JSX. Si alguna vez te preguntas cómo usar tu script en tu HTML, ¡buscar cómo se hace en JSX es probablemente un buen punto de partida!
 :::
 
 
 
 <Box icon="question-mark">
 
-### Analyze the Pattern
+### Analizar el patrón
 
-Given the following `.astro` script:
+Dado el siguiente script `.astro`:
 
 ```astro title="src/pages/about.astro"
 ---
@@ -237,7 +237,7 @@ const student = false;
 ```
 
 
-For each Astro template expression, can you predict the HTML (if any!) that will be sent to the browser? Click to reveal if you're right!
+Para cada expresión de la plantilla Astro, ¿puedes predecir el HTML (¡si lo hay!) que se enviará al navegador? Haz clic para ver si has acertado.
 
 1.  `<p>{operatingSystem}</p>`
 
@@ -245,22 +245,22 @@ For each Astro template expression, can you predict the HTML (if any!) that will
       <Spoiler>`<p>Linux</p>`</Spoiler>
     </p>
 
-2.  `{student && <p>I am still in school.</p>}`
+2.  `{student && <p>Sigo estudiando.</p>}`
 
     <p>
-      <Spoiler>Nothing will display because `student` evaluates to false.</Spoiler>
+      <Spoiler>No se mostrará nada porque `student` se evalúa como falso.</Spoiler>
     </p>
 
-3.  `<p>I have {quantity + 8} pairs of {footwear}</p>`
+3.  `<p>Tengo {quantity + 8} pares de {footwear}</p>`
 
     <p>
-      <Spoiler>`<p>I have 11 pairs of boots</p>`</Spoiler>
+      <Spoiler>`<p>Tengo 11 pares de botas</p>`</Spoiler>
     </p>
 
-4.  `{operatingSystem === "MacOS" ? <p>I am using a Mac.</p> : <p>I am not using a Mac.</p>}`
+4.  `{operatingSystem === "MacOS" ? <p>Utilizo un Mac.</p> : <p>No utilizo un Mac.</p>}`
 
     <p>
-      <Spoiler>`<p>I am not using a Mac.</p>`</Spoiler>
+      <Spoiler>`<p>No utilizo un Mac.</p>`</Spoiler>
     </p>
 </Box>
 
@@ -268,12 +268,12 @@ For each Astro template expression, can you predict the HTML (if any!) that will
 
 <Box icon="check-list">
 <Checklist>
-- [ ] I can define values in and use values in `.astro` files.
-- [ ] I can conditionally render HTML elements.
+- [ ] Puedo definir valores en archivos `.astro` y utilizarlos.
+- [ ] Puedo renderizar condicionalmente elementos HTML.
 </Checklist>
 </Box>
 
 
-### Resources
+### Recursos
 
-- [Dynamic expressions in Astro](/en/core-concepts/astro-syntax/#jsx-like-expressions)
+- [Expresiones dinámicas en Astro](/en/core-concepts/astro-syntax/#jsx-like-expressions)
