--- a/src/content/docs/es/tutorial/2-pages/4.mdx
+++ b/src/content/docs/es/tutorial/2-pages/4.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Style your About page
+title: Estiliza tu página Acerca de
 description: |-
-  Tutorial: Build your first Astro blog —
-  Add an Astro style tag for scoped styling on the page
+  Tutorial: Crea tu primer blog Astro —
+  Añadir una etiqueta de estilo Astro para el estilo de alcance en la página
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -12,19 +12,19 @@ import Box from '~/components/tutorial/Box.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
-Now that you have an About page with content about you, let's style it!
+Ahora que ya tienes una página "Acerca de" con contenido sobre ti, ¡vamos a darle estilo!
 
 <PreCheck>
-  - Style items on a single page
-  - Use CSS variables
+  - Elementos de estilo en una sola página
+  - Utilizar variables CSS
 </PreCheck>
 
 
-## Style an individual page
+## Estilizar una página individual
 
-Using Astro's own `<style></style>` tags, you can style items on your page. Adding **attributes** and **directives** to these tags gives you even more ways to style.
+Usando las etiquetas `<style></style>` de Astro, puedes dar estilo a los elementos de tu página. Si añades **atributos** y **directivas** a estas etiquetas, tendrás aún más formas de aplicar estilos.
 
-1. Copy the following code and paste it into `src/pages/about.astro`:
+1. Copia el siguiente código y pégalo en `src/pages/about.astro`:
 
     ```astro title="src/pages/about.astro" ins={6-11}
     <html lang="en">
@@ -42,21 +42,21 @@ Using Astro's own `<style></style>` tags, you can style items on your page. Addi
 
     ```
 
-    Check all three pages in your browser preview.
+    Compruebe las tres páginas en la vista previa de su navegador
     
-    - Which color is the page title of:
+    - De qué color es el título de la página:
 
-        - Your Home page?  <Spoiler>black</Spoiler>
-        - Your About page? <Spoiler>purple</Spoiler>
-        - Your Blog page? <Spoiler>black</Spoiler>
+        - ¿Su página de inicio?  <Spoiler>negro</Spoiler>
+        - ¿Su página Acerca de? <Spoiler>purpura</Spoiler>
+        - ¿La página de tu blog? <Spoiler>negro</Spoiler>
 
-    - The page with the biggest title text is? <Spoiler>Your About page</Spoiler>
+    - La página con el mayor texto de título es? <Spoiler>Tu página Acerca de</Spoiler>
 
     :::tip
-    If you are unable to determine colors visually, you can use the dev tools in your browser to inspect the `<h1>` title elements and verify the text color applied.
+    Si no puede determinar los colores visualmente, puede utilizar las herramientas de desarrollo de su navegador para inspeccionar los elementos de título `<h1>` y verificar el color del texto aplicado.
     :::
 
-2. Add the class name `skill` to the generated `<li>` elements on your About page, so we can style them. Your code should now look like this:
+2. Añada el nombre de clase `skill` a los elementos `<li>` generados en su página Acerca de, para que podamos aplicarles estilo. Tu código debería tener este aspecto:
 
     ```astro title="src/pages/about.astro" 'class="skill"'
     <p>My skills are:</p>
@@ -65,7 +65,7 @@ Using Astro's own `<style></style>` tags, you can style items on your page. Addi
     </ul>
     ```
 
-3. Add the following code to your existing style tag:
+3. Añada el siguiente código a la etiqueta de estilo existente:
 
      ```astro title="src/pages/about.astro" ins={6-9}
     <style>
@@ -82,25 +82,25 @@ Using Astro's own `<style></style>` tags, you can style items on your page. Addi
 
 
 
-  4. Visit your About page in your browser again, and verify, through visual inspection or dev tools, that each item in your list of skills is now green and bold.
+  4. Vuelve a visitar tu página Acerca de en tu navegador y comprueba, mediante inspección visual o herramientas de desarrollo, que cada elemento de tu lista de habilidades está ahora en verde y en negrita.
 
-## Use your first CSS variable
-The Astro `<style>` tag can also reference any variables from your frontmatter script using the `define:vars={ {...} }` directive. You can **define variables within your code fence**, then **use them as CSS variables in your style tag**.
+## Utilice su primera variable CSS
+La etiqueta Astro `<style>` también puede hacer referencia a cualquier variable de tu script frontmatter usando la directiva `define:vars={ {...} }`. Puedes **definir variables dentro de tu código vallado**, y luego **utilizarlas como variables CSS en tu etiqueta de estilo**.
 
-1. Define a `skillColor` variable by adding it to the frontmatter script of `src/pages/about.astro` like this:
+1. Define una variable `skillColor` añadiéndola al script frontmatter de `src/pages/about.astro` así:
 
     ```astro title="src/pages/about.astro" ins={17}
     ---
-    const pageTitle = "About Me";
+    const pageTitle = "Sobre mi";
 
     const identity = {
       firstName: "Sarah",
       country: "Canada",
-      occupation: "Technical Writer",
-      hobbies: ["photography", "birdwatching", "baseball"],
+      occupation: "Escritor técnico",
+      hobbies: ["fotografia", "observación de aves", "peñarol"],
     };
 
-    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
 
     const happy = true;
     const finished = false;
@@ -110,7 +110,7 @@ The Astro `<style>` tag can also reference any variables from your frontmatter s
     ---
     ```
 
-2. Update your existing `<style>` tag below to first define, then use this `skillColor` variable inside double curly braces.
+2. Actualiza tu etiqueta `<style>` para definir primero, y luego usar, esta variable `skillColor` dentro de llaves dobles.
 
     ```astro title="src/pages/about.astro" "define:vars={{skillColor}}" "var(--skillColor)" del={7} ins={8}
     <style define:vars={{skillColor}}> 
@@ -126,13 +126,13 @@ The Astro `<style>` tag can also reference any variables from your frontmatter s
     </style>
     ```
 
-3. Check your About page in your browser preview. You should see that the skills are now navy blue, as set by the `skillColor` variable passed to the `define:vars` directive.
+3. Comprueba tu página Acerca de en la vista previa de tu navegador. Debería ver que las habilidades son ahora de color azul marino, tal y como establece la variable `skillColor` pasada a la directiva `define:vars`.
 
 <Box icon="puzzle-piece">
 
-## Try it yourself - Define CSS variables
+## Pruébalo tú mismo - Definir variables CSS
  
- 1. Update the `<style>` tag on your About page so that it matches the one below. 
+ 1. Actualice la etiqueta `<style>` de su página Acerca de para que coincida con la de abajo. 
 
     ```astro title="src/pages/about.astro"
     <style define:vars={{skillColor, fontWeight, textCase}}>
@@ -148,26 +148,26 @@ The Astro `<style>` tag can also reference any variables from your frontmatter s
     </style>
     ```
  
- 2. Add any missing variable definitions in your frontmatter script so that your new `<style>` tag successfully applies these styles to your list of skills:
-    - The text color is navy blue
-    - The text is bold
-    - The list items are in all-caps (all uppercase letters)
+ 2. Añade las definiciones de variables que falten en tu script frontmatter para que tu nueva etiqueta `<style>` aplique correctamente estos estilos a tu lista de habilidades:
+    - El color del texto es azul marino
+    - El texto está en negrita
+    - Los elementos de la lista están en mayúsculas (todo en mayúsculas)
 
 <details>
-<summary>✅ Show me the code! ✅</summary>
+<summary>✅ ¡Enséñame el código! ✅</summary>
 
 ```astro title="src/pages/about.astro" ins={18-19}
 ---
-const pageTitle = "About Me";
+const pageTitle = "Sobre mi";
 
 const identity = {
   firstName: "Sarah",
   country: "Canada",
-  occupation: "Technical Writer",
-  hobbies: ["photography", "birdwatching", "baseball"],
+  occupation: "Escritor técnico",
+  hobbies: ["fotografia", "observación de aves", "peñarol"],
 };
 
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
 
 const happy = true;
 const finished = false;
@@ -188,17 +188,17 @@ const textCase = "uppercase";
 ## Checklist
 
 <Checklist>
-- [ ] I can add CSS styles to an individual page using an Astro `<style>` tag.
-- [ ] I can use variables to style elements on the page.
+- [ ] Puedo añadir estilos CSS a una página individual utilizando una etiqueta Astro `<style>`.
+- [ ] Puedo utilizar variables para dar estilo a los elementos de la página.
 </Checklist>
 </Box>
 
-### Resources
-- [Astro syntax vs JSX - comparison](/en/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
+### Recursos
+- [Comparación entre la sintaxis Astro y JSX](/en/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
 
-- [Astro `<style>` tag](/en/guides/styling/#styling-in-astro)
+- [Etiqueta Astro `<style>`.](/en/guides/styling/#styling-in-astro)
 
-- [CSS variables in Astro](/en/guides/styling/#css-variables)
+- [Variables CSS en Astro](/en/guides/styling/#css-variables)
 
 
 
