--- a/src/content/docs/es/tutorial/2-pages/5.mdx
+++ b/src/content/docs/es/tutorial/2-pages/5.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Add site-wide styling
+title: Añadir estilo a todo el sitio
 description: |-
-  Tutorial: Build your first Astro blog —
-  Create a global stylesheet for site-wide styling
+  Tutorial: Crea tu primer blog Astro —
+  Crear una hoja de estilo global para el estilo de todo el sitio
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -12,21 +12,21 @@ import Box from '~/components/tutorial/Box.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
-Now that you have a styled About page, let's add some global styles for the rest of your site!
+Ahora que ya tienes una página "Acerca de" con estilo, vamos a añadir algunos estilos globales para el resto del sitio.
 
 <PreCheck>
-  - Apply styles globally
+  - Aplicar estilos globalmente
 </PreCheck>
 
-## Add a global stylesheet
+## Añadir una hoja de estilo global
 
-You have seen that the Astro `<style>` tag is **scoped by default**, meaning that it only affects the elements in its own file.
+Has visto que la etiqueta Astro `<style>` tiene su propio **scope por defecto**, lo que significa que sólo afecta a los elementos de su propio archivo.
 
-There are a few ways to define styles **globally** in Astro, but in this tutorial, you will create and import a `global.css` file into each of your pages. This combination of stylesheet and `<style>` tag gives you the ability to control some styles site-wide, and to apply some specific styles exactly where you want them.
+Hay varias formas de definir estilos **globales** en Astro, pero en este tutorial, crearás e importarás un archivo `global.css` en cada una de tus páginas. Esta combinación de hoja de estilos y etiqueta `<style>` te da la capacidad de controlar algunos estilos en todo el sitio, y aplicar algunos estilos específicos exactamente donde quieras.
 
-1. Create a new file at the location `src/styles/global.css` (You'll have to create a `styles` folder first.)
+1. Crea un nuevo archivo en la ubicación `src/styles/global.css` (Primero tendrás que crear una carpeta `styles`).
 
-2. Copy the following code into your new file, `global.css`
+2. Copie el siguiente código en su nuevo archivo, `global.css`.
 
     ```css title="src/styles/global.css"
     html {
@@ -52,22 +52,22 @@ There are a few ways to define styles **globally** in Astro, but in this tutoria
     }
     ```
 
-3. In `about.astro`, add the following import statement to your frontmatter: 
+3. En `about.astro`, añade la siguiente sentencia import a tu frontmatter: 
 
     ```astro title="src/pages/about.astro" ins={2}
     ---
     import '../styles/global.css';
 
-    const pageTitle = "About Me";
+    const pageTitle = "Sobre mi";
 
     const identity = {
       firstName: "Sarah",
       country: "Canada",
-      occupation: "Technical Writer",
-      hobbies: ["photography", "birdwatching", "baseball"],
+      occupation: "Escritor técnico",
+      hobbies: ["fotografia", "observación de aves", "peñarol"],
     };
 
-    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
 
     const happy = true;
     const finished = false;
@@ -79,18 +79,18 @@ There are a few ways to define styles **globally** in Astro, but in this tutoria
     ---
     ```
 
-4. Check the browser preview of your About page, and you should now see new styles applied!
+4. Compruebe la vista previa del navegador de su página Acerca de y ahora debería ver los nuevos estilos aplicados.
 
 <Box icon="puzzle-piece">
 
-## Try it yourself - Import your global stylesheet
+## Pruébelo usted mismo - Importe su hoja de estilo global
 
-Add the necessary line of code to each `.astro` file in your project to apply your global styles to every page of your site.
+Añada la línea de código necesaria a cada archivo `.astro` de su proyecto para aplicar sus estilos globales a cada página de su sitio.
 
 <details>
-<summary>✅ Show me the code! ✅</summary>
+<summary>✅ ¡Enséñame el código! ✅</summary>
 
-Add the following import statement to the two other page files: `src/pages/index.astro` and `src/pages/blog.astro`
+Añade la siguiente sentencia import a los otros dos archivos de página: `src/pages/index.astro` y `src/pages/blog.astro`.
 
 ```astro title="src/pages/index.astro" ins={2}
 ---
@@ -100,35 +100,35 @@ import '../styles/global.css';
 </details>
 </Box>
 
-Make any changes or additions you want to the content of your About page by adding HTML elements to the page template, either statically or dynamically. Write any additional JavaScript in your frontmatter script to provide you with values to use in your HTML. When you are happy with this page, commit your changes to GitHub before moving on to the next lesson.
+Realice cualquier cambio o adición que desee en el contenido de su página Acerca de añadiendo elementos HTML a la plantilla de página, ya sea de forma estática o dinámica. Escriba cualquier JavaScript adicional en su script frontmatter para proporcionarle valores para usar en su HTML. Cuando estés satisfecho con esta página, confirma tus cambios en GitHub antes de pasar a la siguiente lección.
 
 <Box icon="question-mark">
-### Analyze the Pattern
+### Analizar el patrón
 
-Your About page is now styled using *both* the imported `global.css` file *and* a `<style>` tag.
+Su página Acerca de ahora tiene estilo usando *ambos* el archivo importado `global.css` *y* una etiqueta `<style>`.
 
-- Are styles from both styling methods being applied? 
+- ¿Se aplican los estilos de ambos métodos de estilización?
 
     <p>
-      <Spoiler>Yes</Spoiler>
+      <Spoiler>Si</Spoiler>
     </p>
 
-- Are there any conflicting styles, and if so, which are applied?
+- ¿Existen estilos contradictorios y, en caso afirmativo, cuál se aplica?
 
     <p>
-      <Spoiler>Yes, `<h1>`  has a size of `2.5rem` globally, but `4rem` locally in the `<style>` tag. The local `4rem` rule is applied on the About page.</Spoiler>
+      <Spoiler>Sí, `<h1>` tiene un tamaño de `2.5rem` globalmente, pero `4rem` localmente en la etiqueta `<style>`. La regla `4rem` local se aplica en la página Acerca de.</Spoiler>
     </p>
 
-- Describe how `global.css` and `<style>` work together.
+- Describe cómo funcionan juntos `global.css` y `<style>`.
 
     <p>
-      <Spoiler>When conflicting styles are defined both globally and in a page's local `<style>` tag, the local styles should overwrite any global styles. (But, there can be other factors involved, so always visually inspect your site to make sure your styles are properly applied!)</Spoiler>
+      <Spoiler>Cuando se definen estilos contradictorios tanto a nivel global como en la etiqueta local `<style>` de una página, los estilos locales deberían sobrescribir cualquier estilo global. (Pero puede haber otros factores implicados, así que inspecciona siempre visualmente tu sitio para asegurarte de que los estilos se aplican correctamente).</Spoiler>
     </p>
 
-- How would you choose whether to declare a style in a `global.css` file or a `<style>` tag?
+- ¿Cómo decidir si declarar un estilo en un archivo `global.css` o en una etiqueta `<style>`?
 
     <p>
-      <Spoiler>If you want a style to be applied site-wide, you would choose to use a `global.css` file. However, if you want styles to apply to only the HTML content in a single `.astro` file, and not affect other elements on your site, you would choose a `<style>` tag.</Spoiler>
+      <Spoiler>Si quieres que un estilo se aplique a todo el sitio, elige un archivo `global.css`. Sin embargo, si desea que los estilos se apliquen sólo al contenido HTML de un único archivo `.astro` y no afecten a otros elementos del sitio, deberá elegir una etiqueta `<style>`.</Spoiler>
     </p>
 
 </Box>
@@ -139,16 +139,16 @@ Your About page is now styled using *both* the imported `global.css` file *and* 
 ## Checklist
 
 <Checklist>
-- [ ] I can add global CSS styles by importing a `.css` file.
+- [ ] Puedo añadir estilos CSS globales importando un archivo `.css`.
 </Checklist>
 </Box>
 
-### Resources
-- [Astro syntax vs JSX - comparison](/en/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
+### Recursos
+- [Comparación entre la sintaxis Astro y JSX](/en/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
 
-- [Astro `<style>` tag](/en/guides/styling/#styling-in-astro)
+- [Etiqueta Astro `<style>`.](/en/guides/styling/#styling-in-astro)
 
-- [CSS variables in Astro](/en/guides/styling/#css-variables)
+- [Variables CSS en Astro](/en/guides/styling/#css-variables)
 
 
 
