--- a/src/content/docs/es/tutorial/2-pages/index.mdx
+++ b/src/content/docs/es/tutorial/2-pages/index.mdx
@@ -1,10 +1,10 @@
 ---
 type: tutorial
-unitTitle: 'Add, style and link to pages on your site'
-title: 'Check in: Unit 2 - Pages'
+unitTitle: 'Añadir, estilizar y enlazar páginas en su sitio web'
+title: 'Check in: Unidad 2 - Páginas'
 description: |-
-  Tutorial: Build your first Astro blog —
-  Create, style, and link to pages posts on your site
+  Tutorial: Crea tu primer blog Astro —
+  Crear, estilizar y enlazar posts a páginas de su sitio web
 ---
 import Checklist from '~/components/Checklist.astro';
 import Badge from '~/components/Badge.astro';
@@ -12,26 +12,26 @@ import Box from '~/components/tutorial/Box.astro';
 import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 
 
-Now that you have a working site on the web, let's add pages and posts!
+Ahora que ya tienes un sitio web en funcionamiento, ¡vamos a añadir páginas y posts!
 
-## Where are we now?
+## ¿Dónde estamos ahora?
 
 <StackblitzIntro tree="withastro/blog-tutorial-demo/tree/unit-2/start"/>
 
-## Where are we going?
+## ¿Adónde vamos?
 
-In this unit, you'll
-- Create your first Astro pages with the `.astro` syntax
-- Add blog posts with Markdown (`.md`) files
-- Style an individual page with `<style>` 
-- Apply global styles across pages
+En esta unidad
+- Cree sus primeras páginas Astro con la sintaxis `.astro
+- Añadir posts con archivos Markdown (`.md`)
+- Estilizar una página individual con `<style>`.
+- Aplicar estilos globales a todas las páginas
 
- Along the way, you'll learn how the **two sections of a `.astro` file**  work together to create a page, and how to use variables and conditional rendering on your pages.
+ Por el camino, aprenderás cómo las **dos secciones de un archivo `.astro`** trabajan juntas para crear una página, y cómo usar variables y renderizado condicional en tus páginas.
 
 <Box icon="check-list">
 ## Checklist
 
 <Checklist>
-- [ ] I am ready to make some new pages for my Astro website!
+- [ ] ¡Estoy listo para hacer algunas páginas nuevas para mi sitio web Astro!
 </Checklist>
 </Box>
